fix: small alignment issue

--- a/src/style/default.scss
+++ b/src/style/default.scss
@@ -41,7 +41,6 @@ $buttonBackgroundColor: #8fc1e3;
   margin: 1em;
 
   .bar-select {
-    margin: 0 0.5em;
     width: 100%;
   }
 
